css/styles.css
:root {
  --primary-color: #f9f7fe;
  --secondary-color: #6c63ff;
  --priority-font-family: "Playfair Display", serif;
  --style-font-family: "Poppins", sans-serif;
}

h1 {
  font-size: 96px;
  font-family: var(--priority-font-family);
  font-weight: bold;
}
h2 {
  font-size: 36px;
  color: black;
  font-family: var(--priority-font-family);
  font-weight: bold;
}
h3 {
  font-size: 16px;
  font-family: var(--style-font-family);
}
h4 {
  font-size: 48px;
  font-family: var(--priority-font-family);
}

p {
  font-size: 16px;
  text-align: center;
  color: #272142;
  font-family: var(--style-font-family);
}
nav {
  padding: 20px 0;
}
nav li {
  display: inline;
  list-style: none;
  line-height: 40px;
  margin-left: 10px;
  color: #272142;
  font-size: 16px;
}
nav a {
  text-decoration: none;
  color: #272142;
  transition: all 100ms ease-in-out;
}

nav li.active a,
nav a:hover {
  color: var(--secondary-color);
}
nav ul {
  padding: 0;
  padding: 0;
}

.content-descriptions h1 {
  font-size: 64px;
  font-family: var(--priority-font-family);
  font-weight: bold;
  color: black;
}
.content-descriptions h3 {
  font-size: 18px;
  font-family: var(--style-font-family);
  font-weight: normal;
}
.content-descriptions p {
  line-height: 30px;
  color: #272142;
  font-size: 16px;
  font-family: var(--style-font-family);
}
.content {
  margin: 100px 30px;
}
.content h2 {
  font-family: var(--priority-font-family);
}

.hero {
  padding: 90px 30px;
  text-align: center;
  background: var(--primary-color);
}
.hero p {
  font-size: 24px;
  margin: 0;
  font-family: var(--priority-font-family);
  font-weight: bold;
  line-height: 2;
}
.img-project {
  padding: 20px;
  border: 1px solid var(--primary-color);
  background: var(--primary-color);
}
.btn-contact {
  font-size: 18px;
  padding: 18px 46px;
  background: var(--secondary-color);
  color: #ffff;
  text-decoration: none;
  border-radius: 4px;
}
.btn-contact:hover {
  background: var(--secondary-color);
  color: #272142;
}
.descriptions {
  color: #272142;
  font-size: 16px;
  font-family: var(--style-font-family);
  text-align: justify;
  color: #6c757d;
  line-height: 30px;
}
.container h2 {
  font-size: 64px;
}
.img-positions {
  padding: 145px 30px;
}
.content p {
  font-size: 14px;
}
.strong {
  padding: 30px;
}
.logo {
  max-height: 40px;
}

footer .contact-follow {
  background: var(--primary-color);
  padding: 30px 100px;
  border-radius: 10px;
  margin: 50px 0;
}
footer .contact-follow p {
  margin: 0;
  text-align: start;
}

footer .email-link {
  text-decoration: none;
  color: black;
  font-size: 24px;
}
footer .email-link:hover {
  color: var(--secondary-color);
}
footer .social-links a {
  margin: 0 20px;
  color: var(--secondary-color);
  background: var(--primary-color);
  padding: 10px 14px;
  border-radius: 50%;
  font-size: 18px;
}
footer .social-links a:hover {
  color: #ffff;
  background: var(--secondary-color);
}
@media (max-width: 900px) {
  h1 {
    font-size: 44px;
    line-height: 56px;
    text-align: center;
  }

  h2 {
    font-size: 44px;
  }
  h4 {
    font-size: 24px;
  }

  .content {
    text-align: center;
    padding: 0;
  }

  .strong {
    padding: 0;
    text-align: center;
  }
}

